# smf-forgewright

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  HERMES.md  OPENCLAW.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
dashboards/: minimal-dashboard.html
docs/: forgewright-engineering-guide.md  safety-model.md
examples/dashboard/: README.md
examples/hls-field-intelligence/: README.md
examples/open-source-project-watchtower/: README.md  demo-dashboard.html  demo-data.json
examples/skillopt/: README.md
playbooks/: open-source-project-watchtower.md  public-hls-field-intelligence.md
playbooks/sources/: open-source-project-watchtower-sources.json  public-hls-field-intelligence-sources.json
scripts/: setup.ps1  setup.sh  update-dashboard.ps1  update-dashboard.sh
src/forgewright/: __init__.py  cli.py
templates/: dashboard-data-contract.json  playbook-template.md  skillopt-rubric-template.md  source-registry-template.json
